# openapi-to-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
openapi_to_mcp/: __init__.py  cli.py
openapi_to_mcp/adapters/: __init__.py  generator.py  spec_loader.py
openapi_to_mcp/adapters/testing/: __init__.py  server_tester.py
openapi_to_mcp/commands/: __init__.py  generate.py  test_server.py
openapi_to_mcp/common/: __init__.py  decorators.py  exceptions.py  logger.py  utils.py
openapi_to_mcp/mapping/: __init__.py  mapper.py  utils.py
openapi_to_mcp/schema/: __init__.py  converter.py
openapi_to_mcp/schema/handlers/: __init__.py  array_schema.py  base.py  common.py  composition.py  number_schema.py  object_schema.py  reference.py  string_schema.py
openapi_to_mcp/templates/: README.md.j2  package.json.j2  tsconfig.json.j2
openapi_to_mcp/templates/src/: index.ts.j2  server.ts.j2  transport_sse.ts.j2  transport_stdio.ts.j2
tests/: conftest.py  constants.py  utils.py
tests/integration/: test_cli.py
tests/resources/: test_openapi.json  test_openapi.yaml
tests/unit/: test_commands_test_server.py  test_common_logger.py  test_common_utils.py  test_decorators.py  test_generator.py  test_mapper.py  test_mapping_utils.py  test_schema_converter.py  test_schema_handlers_base.py  test_schema_handlers_composition.py  test_schema_handlers_number.py  test_server_tester.py  test_spec_loader.py  test_tester.py
